--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.0",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@types/styled-components": "^5.1.25",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "^16.8.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
